--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@faker-js/faker": "^10.1.0",
     "axios": "^1.6.2",
     "clsx": "^2.0.0",
+    "firebase": "^12.6.0",
     "lucide-react": "^0.294.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
