--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
   },
   "dependencies": {
     "@faker-js/faker": "^10.1.0",
+    "@google/generative-ai": "^0.24.1",
     "axios": "^1.6.2",
     "clsx": "^2.0.0",
+    "dotenv": "^17.2.3",
     "firebase": "^12.6.0",
     "lucide-react": "^0.294.0",
+    "openai": "^6.14.0",
+    "pdfjs-dist": "^5.4.449",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.0",
